; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/arch/mips/ath79/extr_mach-rb91x.c_rb711gr100_get_flags.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/arch/mips/ath79/extr_mach-rb91x.c_rb711gr100_get_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rb_board_info = type { i32, i32 }
%struct.rb_info = type { i32 }

@rb711gr100_boards = common dso_local global %struct.rb_board_info* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rb_info*)* @rb711gr100_get_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rb711gr100_get_flags(%struct.rb_info* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rb_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rb_board_info*, align 8
  store %struct.rb_info* %0, %struct.rb_info** %3, align 8
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %29, %1
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.rb_board_info*, %struct.rb_board_info** @rb711gr100_boards, align 8
  %9 = call i32 @ARRAY_SIZE(%struct.rb_board_info* %8)
  %10 = icmp slt i32 %7, %9
  br i1 %10, label %11, label %32

11:                                               ; preds = %6
  %12 = load %struct.rb_board_info*, %struct.rb_board_info** @rb711gr100_boards, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.rb_board_info, %struct.rb_board_info* %12, i64 %14
  store %struct.rb_board_info* %15, %struct.rb_board_info** %5, align 8
  %16 = load %struct.rb_info*, %struct.rb_info** %3, align 8
  %17 = getelementptr inbounds %struct.rb_info, %struct.rb_info* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.rb_board_info*, %struct.rb_board_info** %5, align 8
  %20 = getelementptr inbounds %struct.rb_board_info, %struct.rb_board_info* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @strcmp(i32 %18, i32 %21)
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %11
  %25 = load %struct.rb_board_info*, %struct.rb_board_info** %5, align 8
  %26 = getelementptr inbounds %struct.rb_board_info, %struct.rb_board_info* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %2, align 4
  br label %33

28:                                               ; preds = %11
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %4, align 4
  br label %6

32:                                               ; preds = %6
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %24
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @ARRAY_SIZE(%struct.rb_board_info*) #1

declare dso_local i64 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
